--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="/assets/css/style.css" rel="stylesheet">
 </head>
 <body>
+<img src="https://s3.us-east-2.amazonaws.com/myownfairytale.com/images/Cover.png"
     <div class="image-container" id="imageContainer">
         <!-- Image placeholders -->
     </div>
