--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
         <div class="col-md-11">
         <div id="imageContainer" class="row">
             <div class="col-md-3 p-2" id="slot-1">
-                <img src="/images/card-image.svg" alt="placeholder image">
+                <img src="https://s3.us-east-2.amazonaws.com/myownfairytale.com/images/card-image.svg" alt="placeholder image">
             </div>
             <div class="col-md-3 p-2" id="slot-2">
-                <img src="/images/card-image.svg" alt="placeholder image">
+                <img src="https://s3.us-east-2.amazonaws.com/myownfairytale.com/images/card-image.svg" alt="placeholder image">
             </div>
             <div class="col-md-3 p-2" id="slot-3">
-                <img src="/images/card-image.svg" alt="placeholder image">
+                <img src="https://s3.us-east-2.amazonaws.com/myownfairytale.com/images/card-image.svg" alt="placeholder image">
             </div>
             <div class="col-md-3 p-2" id="slot-4">
-                <img src="/images/card-image.svg" alt="placeholder image">
+                <img src="https://s3.us-east-2.amazonaws.com/myownfairytale.com/images/card-image.svg" alt="placeholder image">
             </div>
         </div>
     </div>
